use powershell syntax for windows build commands

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,8 +28,8 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ; false)
-          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
+          - clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-mac-arm-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-mac-arm-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-mac-arm-malware-scan.txt; false)
+          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-mac-arm-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-mac-arm-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build'
@@ -61,8 +61,8 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          - clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ; false)
-          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
+          - clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-mac-x86-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 librdkafka-mac-x86-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-mac-x86-malware-scan.txt ; false)
+          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-mac-x86-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build'
@@ -167,8 +167,8 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ; false)
-          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-linux-x86-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-linux-x86-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-linux-x86-malware-scan.txt ; false)
+          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-linux-x86-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-linux-x86-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build: centos6 glibc +gssapi'
@@ -228,8 +228,8 @@ blocks:
           - tar -xzf /tmp/clamav-db/signatures.tgz -C /tmp/clamav-db
       epilogue:
         commands:
-          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt ; false)
-          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ;\aws s3 cp librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-$SEMAPHORE_GIT_TAG_NAME-malware-scan.txt
+          -  clamscan -d /tmp/clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-linux-arm-malware-scan.txt || ( . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-linux-arm-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-linux-arm-malware-scan.txt ; false)
+          - . assume-iam-role arn:aws:iam::368821881613:role/semaphore-access ; aws s3 cp librdkafka-linux-arm-malware-scan.txt s3://malware-scan-results/librdkafka/$SEMAPHORE_GIT_TAG_NAME/librdkafka-linux-arm-malware-scan.txt
           - '[[ -z $SEMAPHORE_GIT_TAG_NAME ]] || artifact push workflow artifacts/ --destination artifacts/${ARTIFACT_KEY}/'
       jobs:
         - name: 'Build: centos7 glibc +gssapi'
@@ -280,7 +280,7 @@ blocks:
           - powershell -command "Expand-Archive clamav-signatures.zip C:\clamav-db"
       epilogue:
         commands:
-          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt || (artifact push workflow librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt & exit /b 1 )
+          - (clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-win-malware-scan-results.txt) -or (artifact push workflow librdkafka-win-malware-scan-results.txt -and exit /b 1 )
           - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
       jobs:
         - name: 'Build: MinGW-w64 Dynamic'
@@ -331,8 +331,7 @@ blocks:
         commands:
           - Get-ChildItem . -include *.dll -recurse
           - Get-ChildItem . -include *.lib -recurse
-          - clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt || (artifact push workflow librdkafka-${Env:SEMAPHORE_GIT_TAG_NAME}-malware-scan-results.txt & exit /b 1 )
-          - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
+          - (clamscan -d C:\clamav-db --max-scansize=1024M --max-filesize=1024M -ir artifacts > librdkafka-win-malware-scan-results.txt) -or (artifact push workflow librdkafka-win-malware-scan-results.txt -and exit /b 1 )          - if ($env:SEMAPHORE_GIT_TAG_NAME -ne "") { artifact push workflow artifacts/ --destination artifacts/$Env:ARTIFACT_KEY/ }
       jobs:
         - name: 'Build: MSVC x64'
           env_vars:
