--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -35,29 +35,29 @@ global_job_config:
 
 
 blocks:
-  # - name: "Linux arm64: Build and test"
-  #   dependencies: [ ]
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: s1-prod-ubuntu20-04-arm64-1
-  #     jobs:
-  #       - name: "Build from source and test"
-  #         commands:
-  #           - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
-  #           - make test
+  - name: "Linux arm64: Build and test"
+    dependencies: [ ]
+    task:
+      agent:
+        machine:
+          type: s1-prod-ubuntu20-04-arm64-1
+      jobs:
+        - name: "Build from source and test"
+          commands:
+            - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
+            - make test
 
-  # - name: 'macOS arm64/m1: Build and test'
-    # dependencies: []
-    # task:
-    #   agent:
-    #     machine:
-    #       type: s1-prod-macos-arm64
-    #   jobs:
-    #     - name: 'Build from source and test'
-    #       commands:
-    #         - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
-    #         - make test
+  - name: 'macOS arm64/m1: Build and test'
+    dependencies: []
+    task:
+      agent:
+        machine:
+          type: s1-prod-macos-arm64
+      jobs:
+        - name: 'Build from source and test'
+          commands:
+            - npm install # this will actually not build anything if we have a release, but rather, fetch things using node-pre-gyp - so change this later.
+            - make test
 
   - name: "Linux amd64: Build, test, lint"
     dependencies: [ ]
@@ -77,133 +77,133 @@ blocks:
             - npx eslint lib/kafkajs
 
 
-  # - name: "Linux amd64: Release"
-  #   dependencies: [ ]
-  #   run:
-  #     when: "tag =~ '^v[0-9]\\.'"
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: s1-prod-ubuntu20-04-amd64-2
-  #     env_vars:
-  #       - name: ARCHITECTURE
-  #         value: "x64"
-  #       - name: PLATFORM
-  #         value: "linux"
-  #       - name: LIBC
-  #         value: "glibc"
-  #     jobs:
-  #       - name: "Release: LTS:18"
-  #         commands:
-  #           - sem-version node 18.19.0
-  #           - export NODE_ABI=108
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: LTS:20"
-  #         commands:
-  #           - sem-version node 20.10.0
-  #           - export NODE_ABI=115
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: latest: 21"
-  #         commands:
-  #           - sem-version node 21.4.0
-  #           - export NODE_ABI=120
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+  - name: "Linux amd64: Release"
+    dependencies: [ ]
+    run:
+      when: "tag =~ '^v[0-9]\\.'"
+    task:
+      agent:
+        machine:
+          type: s1-prod-ubuntu20-04-amd64-2
+      env_vars:
+        - name: ARCHITECTURE
+          value: "x64"
+        - name: PLATFORM
+          value: "linux"
+        - name: LIBC
+          value: "glibc"
+      jobs:
+        - name: "Release: LTS:18"
+          commands:
+            - sem-version node 18.19.0
+            - export NODE_ABI=108
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: LTS:20"
+          commands:
+            - sem-version node 20.10.0
+            - export NODE_ABI=115
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: latest: 21"
+          commands:
+            - sem-version node 21.4.0
+            - export NODE_ABI=120
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
 
-  # - name: "Linux arm64: Release"
-  #   dependencies: [ ]
-  #   run:
-  #     when: "tag =~ '^v[0-9]\\.'"
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: s1-prod-ubuntu20-04-arm64-1
-  #     env_vars:
-  #       - name: ARCHITECTURE
-  #         value: "arm64"
-  #       - name: PLATFORM
-  #         value: "linux"
-  #       - name: LIBC
-  #         value: "glibc"
-  #     jobs:
-  #       - name: "Release: LTS:18"
-  #         commands:
-  #           - sem-version node 18.19.0
-  #           - export NODE_ABI=108
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: LTS:20"
-  #         commands:
-  #           - sem-version node 20.10.0
-  #           - export NODE_ABI=115
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: latest: 21"
-  #         commands:
-  #           - sem-version node 21.4.0
-  #           - export NODE_ABI=120
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  # - name: "macOS arm64/m1: Release"
-  #   dependencies: [ ]
-  #   run:
-  #     when: "tag =~ '^v[0-9]\\.'"
-  #   task:
-  #     agent:
-  #       machine:
-  #         type: s1-prod-macos-arm64
-  #     env_vars:
-  #       - name: ARCHITECTURE
-  #         value: "arm64"
-  #       - name: PLATFORM
-  #         value: "darwin"
-  #       - name: LIBC
-  #         value: "unknown"
-  #     jobs:
-  #       - name: "Release: LTS:18"
-  #         commands:
-  #           - sem-version node 18.19.0
-  #           - export NODE_ABI=108
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: LTS:20"
-  #         commands:
-  #           - sem-version node 20.10.0
-  #           - export NODE_ABI=115
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
-  #       - name: "Release: latest: 21"
-  #         commands:
-  #           - sem-version node 21.4.0
-  #           - export NODE_ABI=120
-  #           - export ARTIFACT_KEY="node-librdkafka-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
-  #           - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
-  #           - npx node-pre-gyp package
-  #           - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
-  #           - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+  - name: "Linux arm64: Release"
+    dependencies: [ ]
+    run:
+      when: "tag =~ '^v[0-9]\\.'"
+    task:
+      agent:
+        machine:
+          type: s1-prod-ubuntu20-04-arm64-1
+      env_vars:
+        - name: ARCHITECTURE
+          value: "arm64"
+        - name: PLATFORM
+          value: "linux"
+        - name: LIBC
+          value: "glibc"
+      jobs:
+        - name: "Release: LTS:18"
+          commands:
+            - sem-version node 18.19.0
+            - export NODE_ABI=108
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: LTS:20"
+          commands:
+            - sem-version node 20.10.0
+            - export NODE_ABI=115
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: latest: 21"
+          commands:
+            - sem-version node 21.4.0
+            - export NODE_ABI=120
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+  - name: "macOS arm64/m1: Release"
+    dependencies: [ ]
+    run:
+      when: "tag =~ '^v[0-9]\\.'"
+    task:
+      agent:
+        machine:
+          type: s1-prod-macos-arm64
+      env_vars:
+        - name: ARCHITECTURE
+          value: "arm64"
+        - name: PLATFORM
+          value: "darwin"
+        - name: LIBC
+          value: "unknown"
+      jobs:
+        - name: "Release: LTS:18"
+          commands:
+            - sem-version node 18.19.0
+            - export NODE_ABI=108
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: LTS:20"
+          commands:
+            - sem-version node 20.10.0
+            - export NODE_ABI=115
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
+        - name: "Release: latest: 21"
+          commands:
+            - sem-version node 21.4.0
+            - export NODE_ABI=120
+            - export ARTIFACT_KEY="confluent-kafka-js-${SEMAPHORE_GIT_TAG_NAME}-node-v${NODE_ABI}-${PLATFORM}-${LIBC}-${ARCHITECTURE}.tar.gz"
+            - npm install # node-pre-gyp will fallback to build here, because new tag implies no release yet.
+            - npx node-pre-gyp package
+            - ls build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}
+            - artifact push project "build/stage/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}" --destination "releases/${SEMAPHORE_GIT_TAG_NAME}/${ARTIFACT_KEY}"
