--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:types": "tsc -p ."
   },
   "binary": {
-    "module_name": "node-librdkafka",
+    "module_name": "confluent-kafka-js",
     "module_path": "./build/{configuration}/",
     "package_name": "{module_name}-v{version}-{node_abi}-{platform}-{libc}-{arch}.tar.gz",
     "host": "https://github.com/confluentinc/confluent-kafka-js/releases/download/",
