--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,7 +28,7 @@ global_job_config:
       - git submodule update --init --recursive
       - cd deps/librdkafka
       - git fetch origin
-      - git checkout dev_libdir_fix_for_zstd_zlib
+      - git checkout master
       - cd ../../
       - export MKL_DEBUG=1
 
