--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "confluent-kafka-js",
-  "version": "v0.1.3-devel",
+  "version": "v0.1.4-devel",
   "description": "Node.js bindings for librdkafka",
-  "librdkafka": "2.3.0",
+  "librdkafka": "master",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -28,16 +28,6 @@
     "type": "git",
     "url": "git@github.com:confluentinc/confluent-kafka-js.git"
   },
-  "contributors": [
-    {
-      "name": "Stephen Parente",
-      "email": "webmakersteve@gmail.com"
-    },
-    {
-      "name": "Matt Gollob",
-      "email": "mattness@users.noreply.github.com"
-    }
-  ],
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.5",
@@ -57,6 +47,6 @@
     "nan": "^2.17.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
