--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "confluent-kafka-javascript",
-  "version": "v0.1.7-devel",
+  "version": "v0.1.8-devel",
   "description": "Node.js bindings for librdkafka",
   "librdkafka": "master",
+  "librdkafka_win": "2.3.0",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
   "scripts": {
